# druglike-abeta-antibodies

./: .gitignore  README.md  pyproject.toml
data/: 97_maturation_SMP_binding.xlsx  97_maturation_fibril_binding.xlsx  97_maturation_monomer_competition.xlsx  clone_names.csv
notebooks/: figure-2.ipynb  figure-3.ipynb  figure-6.ipynb  figure-S3-S4.ipynb  figure-S5.ipynb  figure-S7.ipynb  figure-S8.ipynb
results/: Figure-3-Fits.csv
